--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "handlebars-loader": "^1.7.3",
+    "react-dom": "^19.1.0",
     "webpack": "^5.98.0",
     "webpack-cli": "^6.0.1"
   },
