--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "html",
   "version": "1.0.0",
-  "main": "src/index.ts",
+  "main": "src/index.tsx",
   "scripts": {
     "build": "webpack --mode=development",
     "dev": "webpack --mode=development --watch"
@@ -12,12 +12,16 @@
   "dependencies": {
     "handlebars-loader": "^1.7.3",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^7.5.1",
     "webpack": "^5.98.0",
     "webpack-cli": "^6.0.1"
   },
   "devDependencies": {
+    "@types/react-dom": "^19.1.2",
     "copy-webpack-plugin": "^13.0.0",
+    "css-loader": "^7.1.2",
     "html-webpack-plugin": "^5.6.3",
+    "style-loader": "^4.0.0",
     "ts-loader": "^9.5.2",
     "typescript": "^5.8.2"
   }
