--- a/.prettierrc
+++ b/.prettierrc
@@ -3,5 +3,10 @@
   "tabWidth": 2,
   "semi": true,
   "singleQuote": true,
-  "printWidth": 100
+  "printWidth": 100,
+  "useTabs": false,
+  "bracketSpacing": true,
+  "jsxBracketSameLine": false,
+  "arrowParens": "avoid",
+  "endOfLine": "auto"
 }
