--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "main": "src/index.tsx",
   "scripts": {
     "build": "webpack --mode=development",
-    "dev": "webpack --mode=development --watch"
+    "dev": "webpack serve --mode=development --open",
+    "lint": "eslint src/**/*.{ts,tsx}",
+    "lint:fix": "eslint src/**/*.{ts,tsx} --fix",
+    "format": "prettier --write \"src/**/*.{ts,tsx,css,json}\"",
+    "format:check": "prettier --check \"src/**/*.{ts,tsx,css,json}\""
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "handlebars-loader": "^1.7.3",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.5.1",
     "webpack": "^5.98.0",
@@ -19,18 +22,32 @@
   "devDependencies": {
     "@babel/cli": "^7.27.2",
     "@babel/core": "^7.27.1",
+    "@babel/preset-env": "^7.27.2",
+    "@babel/preset-react": "^7.27.1",
+    "@babel/preset-typescript": "^7.27.1",
     "@eslint/js": "^9.25.1",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.6.0",
     "@types/react-dom": "^19.1.2",
+    "@typescript-eslint/eslint-plugin": "^8.32.1",
+    "@typescript-eslint/parser": "^8.32.1",
+    "babel-loader": "^10.0.0",
     "copy-webpack-plugin": "^13.0.0",
     "css-loader": "^7.1.2",
     "eslint": "^9.25.1",
+    "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.4.0",
     "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "fork-ts-checker-webpack-plugin": "^9.1.0",
     "globals": "^16.0.0",
+    "handlebars-loader": "^1.7.3",
     "html-webpack-plugin": "^5.6.3",
+    "prettier": "^3.5.3",
+    "react-refresh": "^0.17.0",
     "style-loader": "^4.0.0",
     "ts-loader": "^9.5.2",
     "typescript": "^5.8.2",
-    "typescript-eslint": "^8.31.0"
+    "typescript-eslint": "^8.31.0",
+    "webpack-dev-server": "^5.2.1"
   }
 }
