--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^19.1.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.1",
+    "swiper": "^11.2.8",
     "webpack": "^5.98.0",
     "webpack-cli": "^6.0.1"
   },
