--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "description": "",
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
+    "@types/react-helmet": "^6.1.11",
     "react-dom": "^19.1.0",
+    "react-helmet": "^6.1.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.1",
     "swiper": "^11.2.8",
